commit updates and working while loop to add data

--- a/FunctionsOld/rewrite_2_0_get_all.ipynb
+++ b/FunctionsOld/rewrite_2_0_get_all.ipynb
@@ -282,7 +282,7 @@
     "            continue\n",
     "        except:\n",
     "            continue\n",
-    "\n",
+    "        ## Check if null values, add to different dicts if null values present, or no nulls present\n",
     "        bool_var = data_df.isnull().values.any()\n",
     "        if bool_var == False:\n",
     "            complete_dict[symbol_var] = data_df\n",
