--- a/Functions/01_get_SEC_data.ipynb
+++ b/Functions/01_get_SEC_data.ipynb
@@ -77,10 +77,10 @@
     "    ## Price column has errors and missing data. Source daily price from IEX later\n",
     "    df.drop(['DESCRIPTION','PRICE'], axis=1,inplace=True)\n",
     "    df['Date'] = pd.to_datetime(df['Date'])\n",
-    "#     df.set_index('Date',inplace=True)\n",
+    "\n",
     "#     df = df.reset_index()\n",
     "    df = df.sort_values([\"SYMBOL\", \"Date\"], ascending = (True, True))\n",
-    "    df = df.reset_index(drop=True)\n",
+    "    df.set_index('Date',inplace=True)\n",
     "    \n",
     "    \n",
     "    return df"
@@ -113,44 +113,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
        "      <th>CUSIP</th>\n",
        "      <th>SYMBOL</th>\n",
        "      <th>QUANTITY_FAILS</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-02</td>\n",
+       "      <th>2020-01-02</th>\n",
        "      <td>G48833126</td>\n",
        "      <td>3126REORGPAY</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-03</td>\n",
+       "      <th>2020-01-03</th>\n",
        "      <td>G48833126</td>\n",
        "      <td>3126REORGPAY</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-01-06</td>\n",
+       "      <th>2020-01-06</th>\n",
        "      <td>G48833126</td>\n",
        "      <td>3126REORGPAY</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-01-07</td>\n",
+       "      <th>2020-01-07</th>\n",
        "      <td>G48833126</td>\n",
        "      <td>3126REORGPAY</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-01-10</td>\n",
+       "      <th>2020-01-10</th>\n",
        "      <td>00846U101</td>\n",
        "      <td>A</td>\n",
        "      <td>126</td>\n",
@@ -160,63 +160,58 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62280</th>\n",
-       "      <td>2021-10-20</td>\n",
+       "      <th>2021-10-20</th>\n",
        "      <td>98986M103</td>\n",
        "      <td>ZYXI</td>\n",
        "      <td>266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62281</th>\n",
-       "      <td>2021-10-26</td>\n",
+       "      <th>2021-10-26</th>\n",
        "      <td>98986M103</td>\n",
        "      <td>ZYXI</td>\n",
        "      <td>215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62282</th>\n",
-       "      <td>2021-10-27</td>\n",
+       "      <th>2021-10-27</th>\n",
        "      <td>98986M103</td>\n",
        "      <td>ZYXI</td>\n",
        "      <td>95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62283</th>\n",
-       "      <td>2021-10-28</td>\n",
+       "      <th>2021-10-28</th>\n",
        "      <td>98986M103</td>\n",
        "      <td>ZYXI</td>\n",
        "      <td>2104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62284</th>\n",
-       "      <td>2021-10-29</td>\n",
+       "      <th>2021-10-29</th>\n",
        "      <td>98986M103</td>\n",
        "      <td>ZYXI</td>\n",
        "      <td>1000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2411268 rows × 4 columns</p>\n",
+       "<p>2411268 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date      CUSIP        SYMBOL QUANTITY_FAILS\n",
-       "0     2020-01-02  G48833126  3126REORGPAY             36\n",
-       "1     2020-01-03  G48833126  3126REORGPAY             36\n",
-       "2     2020-01-06  G48833126  3126REORGPAY             36\n",
-       "3     2020-01-07  G48833126  3126REORGPAY             36\n",
-       "4     2020-01-10  00846U101             A            126\n",
-       "...          ...        ...           ...            ...\n",
-       "62280 2021-10-20  98986M103          ZYXI            266\n",
-       "62281 2021-10-26  98986M103          ZYXI            215\n",
-       "62282 2021-10-27  98986M103          ZYXI             95\n",
-       "62283 2021-10-28  98986M103          ZYXI           2104\n",
-       "62284 2021-10-29  98986M103          ZYXI           1000\n",
+       "                CUSIP        SYMBOL QUANTITY_FAILS\n",
+       "Date                                              \n",
+       "2020-01-02  G48833126  3126REORGPAY             36\n",
+       "2020-01-03  G48833126  3126REORGPAY             36\n",
+       "2020-01-06  G48833126  3126REORGPAY             36\n",
+       "2020-01-07  G48833126  3126REORGPAY             36\n",
+       "2020-01-10  00846U101             A            126\n",
+       "...               ...           ...            ...\n",
+       "2021-10-20  98986M103          ZYXI            266\n",
+       "2021-10-26  98986M103          ZYXI            215\n",
+       "2021-10-27  98986M103          ZYXI             95\n",
+       "2021-10-28  98986M103          ZYXI           2104\n",
+       "2021-10-29  98986M103          ZYXI           1000\n",
        "\n",
-       "[2411268 rows x 4 columns]"
+       "[2411268 rows x 3 columns]"
       ]
      },
      "execution_count": 5,
@@ -252,16 +247,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2411268 entries, 0 to 62284\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column          Dtype         \n",
-      "---  ------          -----         \n",
-      " 0   Date            datetime64[ns]\n",
-      " 1   CUSIP           object        \n",
-      " 2   SYMBOL          object        \n",
-      " 3   QUANTITY_FAILS  object        \n",
-      "dtypes: datetime64[ns](1), object(3)\n",
-      "memory usage: 92.0+ MB\n"
+      "DatetimeIndex: 2411268 entries, 2020-01-02 to 2021-10-29\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column          Dtype \n",
+      "---  ------          ----- \n",
+      " 0   CUSIP           object\n",
+      " 1   SYMBOL          object\n",
+      " 2   QUANTITY_FAILS  object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 73.6+ MB\n"
      ]
     }
    ],
