Update 04_read file with key_list function

--- a/Functions/test_04_read_data.ipynb
+++ b/Functions/test_04_read_data.ipynb
@@ -22,14 +22,14 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "import glob\n",
+    "#import glob\n",
     "\n",
     "from pathlib import Path\n",
-    "import csv\n",
+    "#import csv\n",
     "\n",
     "# import os\n",
     "# import requests\n",
-    "import json\n",
+    "#import json\n",
     "\n",
     "# from dotenv import load_dotenv\n",
     "# load_dotenv()"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "873fa589-3d9e-4610-bd3c-fe839523aa0d",
    "metadata": {},
    "outputs": [],
@@ -66,12 +66,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "0208d5d7-1ea3-48c4-94ff-fd4e8145b3a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3573"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key_list = []\n",
+    "for key in imported_data.keys():\n",
+    "    key_list.append(key) \n",
+    "    \n",
+    "len(key_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "d1b511e5-1377-4f87-abd8-50f3417abcfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Fundamentals': {'sharesOutstanding': 10700000,\n",
+       "  'floatShares': 0,\n",
+       "  'debt_ratio': 'debt_ratioValue',\n",
+       "  'exchange': 'New York Stock Exchange Arca',\n",
+       "  'final_close_price': 94.29,\n",
+       "  'peRatio': 0,\n",
+       "  'beta': 0.6972426471795934,\n",
+       "  'week52high': 104.31,\n",
+       "  'week52low': 58.7,\n",
+       "  'week52change': 0.6556517112668445,\n",
+       "  'avg10Volume': 3833057,\n",
+       "  'avg30Volume': 3130799,\n",
+       "  'marketcap_IEX': 1065506000,\n",
+       "  'marketcap_FMP': 1204937984},\n",
+       " 'dataFrame':                  open       high        low      close   adjClose     volume  \\\n",
+       " Date                                                                           \n",
+       " 2020-01-02  46.540001  46.540001  45.439999  45.660000  44.978550  3539300.0   \n",
+       " 2020-01-03  45.040001  45.500000  45.009998  45.310001  44.633770  4236000.0   \n",
+       " 2020-01-06  45.099998  45.549999  44.930000  45.470001  44.791386  3350300.0   \n",
+       " 2020-01-07  45.500000  45.680000  45.020000  45.310001  44.633770  2889600.0   \n",
+       " 2020-01-08  45.730000  45.779999  45.189999  45.400002  44.722431  4679700.0   \n",
+       " ...               ...        ...        ...        ...        ...        ...   \n",
+       " 2021-10-25  94.600000  96.220000  94.550000  95.980000  95.980000  6246853.0   \n",
+       " 2021-10-26  96.300000  96.500000  94.020000  94.070000  94.070000  1764298.0   \n",
+       " 2021-10-27  94.180000  94.260000  91.880000  91.910000  91.910000  2340433.0   \n",
+       " 2021-10-28  92.420000  93.850000  92.345000  93.540000  93.540000  1577199.0   \n",
+       " 2021-10-29  93.580000  94.355000  93.145000  94.290000  94.290000  2829061.0   \n",
+       " \n",
+       "             unadjustedVolume  change  changePercent      vwap  changeOverTime  \\\n",
+       " Date                                                                            \n",
+       " 2020-01-02         3539300.0   -0.88         -1.891  45.88000        -0.01891   \n",
+       " 2020-01-03         4236000.0    0.27          0.599  45.27333         0.00599   \n",
+       " 2020-01-06         3350300.0    0.37          0.820  45.31667         0.00820   \n",
+       " 2020-01-07         2889600.0   -0.19         -0.418  45.33667        -0.00418   \n",
+       " 2020-01-08         4679700.0   -0.33         -0.722  45.45667        -0.00722   \n",
+       " ...                      ...     ...            ...       ...             ...   \n",
+       " 2021-10-25         6246853.0    1.38          1.459  95.58333         0.01459   \n",
+       " 2021-10-26         1764298.0   -2.23         -2.316  94.86333        -0.02316   \n",
+       " 2021-10-27         2340433.0   -2.27         -2.410  92.68333        -0.02410   \n",
+       " 2021-10-28         1577199.0    1.12          1.212  93.24500         0.01212   \n",
+       " 2021-10-29         2829061.0    0.71          0.759  93.93000         0.00759   \n",
+       " \n",
+       "             QUANTITY_FAILS  ShortVolumeNSDQ  ShortExemptVolumeNSDQ  \\\n",
+       " Date                                                                 \n",
+       " 2020-01-02         98778.0         562088.0                    0.0   \n",
+       " 2020-01-03          5411.0         358132.0                    0.0   \n",
+       " 2020-01-06         49843.0         429475.0                    0.0   \n",
+       " 2020-01-07          5981.0         303716.0                 2990.0   \n",
+       " 2020-01-08         48788.0         553441.0                  550.0   \n",
+       " ...                    ...              ...                    ...   \n",
+       " 2021-10-25          7014.0         161638.0                    6.0   \n",
+       " 2021-10-26          5456.0         160384.0                  100.0   \n",
+       " 2021-10-27          8326.0         203865.0                  325.0   \n",
+       " 2021-10-28             0.0          82810.0                  320.0   \n",
+       " 2021-10-29        459523.0         319923.0                  483.0   \n",
+       " \n",
+       "             TotalVolumeNSDQ  ShortVolumeNYSE  ShortExemptVolumeNYSE  \\\n",
+       " Date                                                                  \n",
+       " 2020-01-02         761798.0           5894.0                    0.0   \n",
+       " 2020-01-03         536933.0            903.0                    0.0   \n",
+       " 2020-01-06         661267.0           2282.0                    0.0   \n",
+       " 2020-01-07         364423.0           7250.0                    0.0   \n",
+       " 2020-01-08         716071.0           4421.0                    0.0   \n",
+       " ...                     ...              ...                    ...   \n",
+       " 2021-10-25         240430.0           7683.0                    0.0   \n",
+       " 2021-10-26         264383.0           9665.0                    0.0   \n",
+       " 2021-10-27         285294.0           3934.0                    0.0   \n",
+       " 2021-10-28         172704.0           4273.0                    7.0   \n",
+       " 2021-10-29         596548.0           4165.0                   12.0   \n",
+       " \n",
+       "             TotalVolumeNYSE  \n",
+       " Date                         \n",
+       " 2020-01-02          31867.0  \n",
+       " 2020-01-03          13053.0  \n",
+       " 2020-01-06          12849.0  \n",
+       " 2020-01-07          19022.0  \n",
+       " 2020-01-08           7443.0  \n",
+       " ...                     ...  \n",
+       " 2021-10-25          16256.0  \n",
+       " 2021-10-26          15153.0  \n",
+       " 2021-10-27           8495.0  \n",
+       " 2021-10-28          15505.0  \n",
+       " 2021-10-29          12837.0  \n",
+       " \n",
+       " [462 rows x 18 columns],\n",
+       " 'companyProfile': {'symbol': 'XRT',\n",
+       "  'price': 99.58,\n",
+       "  'beta': 0.0,\n",
+       "  'volAvg': 2869864,\n",
+       "  'mktCap': 1204937984,\n",
+       "  'lastDiv': 0.717,\n",
+       "  'range': '59.24-104.31',\n",
+       "  'changes': -1.3899994,\n",
+       "  'companyName': 'SPDR S&P Retail ETF',\n",
+       "  'currency': 'USD',\n",
+       "  'cik': None,\n",
+       "  'isin': 'US78464A7147',\n",
+       "  'cusip': None,\n",
+       "  'exchange': 'New York Stock Exchange Arca',\n",
+       "  'exchangeShortName': 'AMEX',\n",
+       "  'industry': '',\n",
+       "  'website': '',\n",
+       "  'description': 'XRT was created on 06/19/06 by State Street Global Advisors. The ETF tracks a broad-based, equal-weighted index of stocks in the US retail industry.',\n",
+       "  'ceo': 'None',\n",
+       "  'sector': '',\n",
+       "  'country': 'US',\n",
+       "  'fullTimeEmployees': None,\n",
+       "  'phone': '866-787-2257',\n",
+       "  'address': '',\n",
+       "  'city': '',\n",
+       "  'state': '',\n",
+       "  'zip': None,\n",
+       "  'dcfDiff': None,\n",
+       "  'dcf': 0.0,\n",
+       "  'image': 'https://fmpcloud.io/image-stock/XRT.png',\n",
+       "  'ipoDate': '2006-06-19',\n",
+       "  'defaultImage': False,\n",
+       "  'isEtf': True,\n",
+       "  'isActivelyTrading': True,\n",
+       "  'isAdr': False,\n",
+       "  'isFund': False},\n",
+       " 'floatData': 0,\n",
+       " 'textNews': ['article1', 'article2', 'article3'],\n",
+       " 'returns': 'returns_data',\n",
+       " 'iex_statistics': {'companyName': 'SPDR Series Trust',\n",
+       "  'marketcap': 1065506000,\n",
+       "  'week52high': 104.31,\n",
+       "  'week52low': 58.7,\n",
+       "  'week52highSplitAdjustOnly': 104.31,\n",
+       "  'week52lowSplitAdjustOnly': 59.24,\n",
+       "  'week52change': 0.6556517112668445,\n",
+       "  'sharesOutstanding': 10700000,\n",
+       "  'float': 0,\n",
+       "  'avg10Volume': 3833057,\n",
+       "  'avg30Volume': 3130799,\n",
+       "  'day200MovingAvg': 94.98,\n",
+       "  'day50MovingAvg': 97.02,\n",
+       "  'employees': 0,\n",
+       "  'ttmEPS': 0,\n",
+       "  'ttmDividendRate': 0.715011752434804,\n",
+       "  'dividendYield': 0.007180274677995622,\n",
+       "  'nextDividendDate': '2021-12-20',\n",
+       "  'exDividendDate': '2021-09-20',\n",
+       "  'nextEarningsDate': '',\n",
+       "  'peRatio': 0,\n",
+       "  'beta': 0.6972426471795934,\n",
+       "  'maxChangePercent': 5.006611011919124,\n",
+       "  'year5ChangePercent': 1.28003333730206,\n",
+       "  'year2ChangePercent': 1.328332803351976,\n",
+       "  'year1ChangePercent': 0.6529282292520824,\n",
+       "  'ytdChangePercent': 0.5560177321643147,\n",
+       "  'month6ChangePercent': 0.0931133202191934,\n",
+       "  'month3ChangePercent': 0.0257931663921398,\n",
+       "  'month1ChangePercent': 0.05397967823878069,\n",
+       "  'day30ChangePercent': 0.03750781412794324,\n",
+       "  'day5ChangePercent': -0.02151911172251153}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "imported_data['ARKQ']"
+    "imported_data['XRT']"
    ]
   },
   {
