--- a/Functions/test_04_read_data.ipynb
+++ b/Functions/test_04_read_data.ipynb
@@ -10,7 +10,9 @@
     "## Finished DFs with Time-Series data, Fundamentals data, with IEX and (most) FMP statistics attached to \n",
     "## the data dicts. \n",
     "\n",
-    "## Data can still be added and appended further - but calling FMP and IEX *should* be finished for the most part. "
+    "## Data can still be added and appended further - but calling FMP and IEX *should* be finished for the most part. \n",
+    "\n",
+    "## Don't use this file to append data from APIs. Only to read data and clean it and export it further"
    ]
   },
   {
@@ -179,7 +181,11 @@
     "    elif imported_data[i]['companyProfile'] == 0:\n",
     "        notfull_key_list.append(i)\n",
     "        data = imported_data[i]\n",
-    "        notfull_key_data_dict[i] = data  "
+    "        notfull_key_data_dict[i] = data  \n",
+    "        \n",
+    "\n",
+    "path = Path('../Resources/read_04_full_key_list.pkl')\n",
+    "save_obj(full_key_list,path)"
    ]
   },
   {
@@ -336,8 +342,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "565881ab-30de-41db-a711-593fcf30fb26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3429"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_key_data_dict['TSLA']\n",
+    "len(full_key_data_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e99c149-6b5d-42a4-9fda-e53c856f6dc4",
    "metadata": {},
    "outputs": [],
    "source": []
