--- a/Functions2/01_read_SEC_data.ipynb
+++ b/Functions2/01_read_SEC_data.ipynb
@@ -203,7 +203,9 @@
     "all_files = glob.glob(path + \"/*.txt\")\n",
     "\n",
     "ftd_df = pd.DataFrame()\n",
+    "loop_count = 0\n",
     "error_count = 0\n",
+    "error_list = []\n",
     "\n",
     "for filename in all_files:\n",
     "    if filename == 0:\n",
@@ -211,7 +213,10 @@
     "    else:\n",
     "        ftd_df2 = read_ftd_file(filename)\n",
     "        ftd_df = pd.concat([ftd_df,ftd_df2],axis='rows')\n",
-    "    error_count+=1\n",
+    "    loop_count+=1\n",
+    "    if ftd_df.isnull().values.any() == True:\n",
+    "        error_list.append(filename)\n",
+    "        error_count +=1\n",
     "\n",
     "## Below code shows only 3 null values out of 7 million \n",
     "## Dropping the 3 null values\n",
@@ -225,6 +230,27 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "9ed9456f-ac87-436f-b995-9077100cee4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\watso\\\\OneDrive\\\\Projects\\\\FintechProject2_TWbranch\\\\Fintech_Project_2\\\\SEC_Text\\\\cnsfails202110b.txt'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "a4d4a14e-3fa8-4297-a600-5c26012efbdf",
    "metadata": {},
    "outputs": [
@@ -252,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5285602b-6077-433c-a7c7-ac1ba0b1fd4a",
    "metadata": {},
    "outputs": [
@@ -262,7 +288,7 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "aa7cd861-7034-4404-b352-d6d8117ea128",
    "metadata": {},
    "outputs": [
@@ -380,7 +406,7 @@
        "[33916 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "329ff6ad-a422-4954-9edb-7fd660a2df5f",
    "metadata": {},
    "outputs": [
@@ -405,7 +431,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5596d8cd-801e-4705-ae13-2ba956e3878a",
    "metadata": {},
    "outputs": [
@@ -434,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c13a7ce6-e0ac-4f56-9235-b74df047b374",
    "metadata": {},
    "outputs": [
@@ -452,16 +478,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "305a50c5-7a04-4dc8-aa2d-b7c689f489dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ## Export DFs\n",
-    "# ftd_df.to_csv('../Resources/ftd_all_data.csv')\n",
-    "# cusip_symbol_df.to_csv('../Resources/symbol_all_list.csv')\n",
-    "# save_obj(ftd_df, '../Resources/ftd_all_data.pkl')\n",
-    "# save_obj(cusip_symbol_df, '../Resources/symbol_all_list.pkl')"
+    "## Export DFs\n",
+    "ftd_df.to_csv('../Resources/ftd_all_data.csv')\n",
+    "cusip_symbol_df.to_csv('../Resources/symbol_all_list.csv')\n",
+    "save_obj(ftd_df, '../Resources/ftd_all_data.pkl')\n",
+    "save_obj(cusip_symbol_df, '../Resources/symbol_all_list.pkl')"
    ]
   }
  ],
