Update and save

--- a/Functions2/01_read_SEC_data.ipynb
+++ b/Functions2/01_read_SEC_data.ipynb
@@ -94,38 +94,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2016-01-04</td>\n",
-       "      <td>427093117</td>\n",
-       "      <td>3117DVIPAY</td>\n",
-       "      <td>32148.0</td>\n",
+       "      <td>2017-09-11</td>\n",
+       "      <td>Y21990034</td>\n",
+       "      <td>0034RIGHTS</td>\n",
+       "      <td>103745.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2016-01-05</td>\n",
-       "      <td>427093117</td>\n",
-       "      <td>3117DVIPAY</td>\n",
-       "      <td>32148.0</td>\n",
+       "      <td>2017-09-12</td>\n",
+       "      <td>Y21990034</td>\n",
+       "      <td>0034RIGHTS</td>\n",
+       "      <td>103745.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2016-01-06</td>\n",
-       "      <td>427093117</td>\n",
-       "      <td>3117DVIPAY</td>\n",
-       "      <td>32148.0</td>\n",
+       "      <td>2018-10-17</td>\n",
+       "      <td>812350122</td>\n",
+       "      <td>0122PIK</td>\n",
+       "      <td>828.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2016-01-07</td>\n",
-       "      <td>427093117</td>\n",
-       "      <td>3117DVIPAY</td>\n",
-       "      <td>32148.0</td>\n",
+       "      <td>2018-10-18</td>\n",
+       "      <td>812350122</td>\n",
+       "      <td>0122PIK</td>\n",
+       "      <td>828.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2016-01-08</td>\n",
-       "      <td>427093117</td>\n",
-       "      <td>3117DVIPAY</td>\n",
-       "      <td>32148.0</td>\n",
+       "      <td>2019-05-02</td>\n",
+       "      <td>812350122</td>\n",
+       "      <td>0122PIK</td>\n",
+       "      <td>828.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -136,38 +136,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7022993</th>\n",
-       "      <td>2021-10-20</td>\n",
-       "      <td>98986M103</td>\n",
-       "      <td>ZYXI</td>\n",
-       "      <td>266.0</td>\n",
+       "      <td>2021-05-25</td>\n",
+       "      <td>98959W203</td>\n",
+       "      <td>ZZZOD</td>\n",
+       "      <td>324.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7022994</th>\n",
-       "      <td>2021-10-26</td>\n",
-       "      <td>98986M103</td>\n",
-       "      <td>ZYXI</td>\n",
-       "      <td>215.0</td>\n",
+       "      <td>2021-05-26</td>\n",
+       "      <td>98959W203</td>\n",
+       "      <td>ZZZOD</td>\n",
+       "      <td>354.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7022995</th>\n",
-       "      <td>2021-10-27</td>\n",
-       "      <td>98986M103</td>\n",
-       "      <td>ZYXI</td>\n",
-       "      <td>95.0</td>\n",
+       "      <td>2021-05-27</td>\n",
+       "      <td>98959W203</td>\n",
+       "      <td>ZZZOD</td>\n",
+       "      <td>976.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7022996</th>\n",
-       "      <td>2021-10-28</td>\n",
-       "      <td>98986M103</td>\n",
-       "      <td>ZYXI</td>\n",
-       "      <td>2104.0</td>\n",
+       "      <td>2021-05-28</td>\n",
+       "      <td>98959W203</td>\n",
+       "      <td>ZZZOD</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7022997</th>\n",
-       "      <td>2021-10-29</td>\n",
-       "      <td>98986M103</td>\n",
-       "      <td>ZYXI</td>\n",
-       "      <td>1000.0</td>\n",
+       "      <td>2021-06-17</td>\n",
+       "      <td>98959W203</td>\n",
+       "      <td>ZZZOF</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -176,17 +176,17 @@
       ],
       "text/plain": [
        "              Date      CUSIP      SYMBOL  QUANTITY_FAILS\n",
-       "0       2016-01-04  427093117  3117DVIPAY         32148.0\n",
-       "1       2016-01-05  427093117  3117DVIPAY         32148.0\n",
-       "2       2016-01-06  427093117  3117DVIPAY         32148.0\n",
-       "3       2016-01-07  427093117  3117DVIPAY         32148.0\n",
-       "4       2016-01-08  427093117  3117DVIPAY         32148.0\n",
+       "0       2017-09-11  Y21990034  0034RIGHTS        103745.0\n",
+       "1       2017-09-12  Y21990034  0034RIGHTS        103745.0\n",
+       "2       2018-10-17  812350122     0122PIK           828.0\n",
+       "3       2018-10-18  812350122     0122PIK           828.0\n",
+       "4       2019-05-02  812350122     0122PIK           828.0\n",
        "...            ...        ...         ...             ...\n",
-       "7022993 2021-10-20  98986M103        ZYXI           266.0\n",
-       "7022994 2021-10-26  98986M103        ZYXI           215.0\n",
-       "7022995 2021-10-27  98986M103        ZYXI            95.0\n",
-       "7022996 2021-10-28  98986M103        ZYXI          2104.0\n",
-       "7022997 2021-10-29  98986M103        ZYXI          1000.0\n",
+       "7022993 2021-05-25  98959W203       ZZZOD           324.0\n",
+       "7022994 2021-05-26  98959W203       ZZZOD           354.0\n",
+       "7022995 2021-05-27  98959W203       ZZZOD           976.0\n",
+       "7022996 2021-05-28  98959W203       ZZZOD             2.0\n",
+       "7022997 2021-06-17  98959W203       ZZZOF             1.0\n",
        "\n",
        "[7022998 rows x 4 columns]"
       ]
@@ -222,7 +222,7 @@
     "## Dropping the 3 null values\n",
     "\n",
     "ftd_df.dropna(inplace=True)\n",
-    "\n",
+    "ftd_df.sort_values([\"SYMBOL\", \"Date\"], ascending = (True, True),inplace=True)\n",
     "ftd_df.reset_index(inplace=True)\n",
     "ftd_df"
    ]
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "305a50c5-7a04-4dc8-aa2d-b7c689f489dd",
    "metadata": {},
    "outputs": [],
@@ -489,6 +489,14 @@
     "save_obj(ftd_df, '../Resources/ftd_all_data.pkl')\n",
     "save_obj(cusip_symbol_df, '../Resources/symbol_all_list.pkl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60711b2e-4bb5-4571-9147-8120bcd0b2c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
