updated combined dataframes

--- a/Technical_Indicators/techincal.ipynb
+++ b/Technical_Indicators/techincal.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "5aaa1fe3",
+   "id": "d1173c72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from dotenv import load_dotenv\n",
     "from datetime import date\n",
     "import os\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
@@ -22,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e68d1ca8",
+   "id": "2fa9843f",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c8029662",
+   "id": "a37f4b49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "96732f80",
+   "id": "b2667223",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,18 +230,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "dec1ca59",
+   "execution_count": 103,
+   "id": "3fe23655",
    "metadata": {},
    "outputs": [],
    "source": [
-    "aapl_indicators = TechnicalIndicators('MU')"
+    "aapl_indicators = TechnicalIndicators('A')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "d70ee5a9",
+   "execution_count": 104,
+   "id": "91ea4217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "0b59c08c",
+   "id": "be912580",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "71955742",
+   "id": "494a3914",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "f65265f5",
+   "id": "1a03976b",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "9433bb20",
+   "id": "755617a7",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 454,
-   "id": "37586cad",
+   "id": "16600a2b",
    "metadata": {},
    "outputs": [
     {
@@ -557,8 +558,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "id": "cbfd0839",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(np.random.randint(0,1000,size=(10,2)), columns = list('ab'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "877f9954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from numpy.lib.stride_tricks import as_strided\n",
+    "from numpy.lib import pad\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "a57d7884",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8,)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.a.values.strides"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c46c0f32",
+   "id": "5b31950b",
    "metadata": {},
    "outputs": [],
    "source": []
