--- a/Functions2/test_05_loop_ML_model.ipynb
+++ b/Functions2/test_05_loop_ML_model.ipynb
@@ -40,6 +40,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "%matplotlib inline"
@@ -146,7 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "id": "fdd7a8ba-88c3-4746-8554-24a3d2c1d6c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn = Sequential()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "2667c2cb-ef9c-4276-8ee5-333b37105880",
    "metadata": {},
    "outputs": [],
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "7235097d-8c78-46da-a698-f9c97270e5c5",
    "metadata": {},
    "outputs": [],
@@ -257,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "94cea1a6-19a7-43d1-995f-e4f31e5e9cf6",
    "metadata": {},
    "outputs": [
@@ -295,27 +306,27 @@
        "    <tr>\n",
        "      <th>2016-01-04</th>\n",
        "      <td>28.309999</td>\n",
-       "      <td>28.341759</td>\n",
+       "      <td>28.396738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-01-05</th>\n",
        "      <td>28.770000</td>\n",
-       "      <td>28.670460</td>\n",
+       "      <td>28.668262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-01-06</th>\n",
        "      <td>28.370001</td>\n",
-       "      <td>28.222542</td>\n",
+       "      <td>28.210463</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-01-07</th>\n",
        "      <td>28.450001</td>\n",
-       "      <td>28.403650</td>\n",
+       "      <td>28.422684</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-01-08</th>\n",
        "      <td>28.370001</td>\n",
-       "      <td>28.297304</td>\n",
+       "      <td>28.265915</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -325,27 +336,27 @@
        "    <tr>\n",
        "      <th>2021-10-25</th>\n",
        "      <td>173.970000</td>\n",
-       "      <td>173.611160</td>\n",
+       "      <td>165.223419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-26</th>\n",
        "      <td>177.840000</td>\n",
-       "      <td>179.327011</td>\n",
+       "      <td>170.849884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-27</th>\n",
        "      <td>173.510000</td>\n",
-       "      <td>174.201584</td>\n",
+       "      <td>164.030258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-28</th>\n",
        "      <td>182.850000</td>\n",
-       "      <td>182.778519</td>\n",
+       "      <td>174.427063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-29</th>\n",
        "      <td>183.510000</td>\n",
-       "      <td>183.002487</td>\n",
+       "      <td>172.660767</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -355,22 +366,22 @@
       "text/plain": [
        "                 close   predicted\n",
        "Date                              \n",
-       "2016-01-04   28.309999   28.341759\n",
-       "2016-01-05   28.770000   28.670460\n",
-       "2016-01-06   28.370001   28.222542\n",
-       "2016-01-07   28.450001   28.403650\n",
-       "2016-01-08   28.370001   28.297304\n",
+       "2016-01-04   28.309999   28.396738\n",
+       "2016-01-05   28.770000   28.668262\n",
+       "2016-01-06   28.370001   28.210463\n",
+       "2016-01-07   28.450001   28.422684\n",
+       "2016-01-08   28.370001   28.265915\n",
        "...                ...         ...\n",
-       "2021-10-25  173.970000  173.611160\n",
-       "2021-10-26  177.840000  179.327011\n",
-       "2021-10-27  173.510000  174.201584\n",
-       "2021-10-28  182.850000  182.778519\n",
-       "2021-10-29  183.510000  183.002487\n",
+       "2021-10-25  173.970000  165.223419\n",
+       "2021-10-26  177.840000  170.849884\n",
+       "2021-10-27  173.510000  164.030258\n",
+       "2021-10-28  182.850000  174.427063\n",
+       "2021-10-29  183.510000  172.660767\n",
        "\n",
        "[1468 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "afa9bd4c-33f6-4519-81fc-9fde8ec4ff5d",
    "metadata": {},
    "outputs": [
@@ -422,77 +433,77 @@
        "    <tr>\n",
        "      <th>2021-10-11</th>\n",
        "      <td>178.10</td>\n",
-       "      <td>180.531998</td>\n",
+       "      <td>172.113159</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-12</th>\n",
        "      <td>175.82</td>\n",
-       "      <td>175.915726</td>\n",
+       "      <td>165.821625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-13</th>\n",
        "      <td>184.06</td>\n",
-       "      <td>184.310516</td>\n",
+       "      <td>175.341843</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-14</th>\n",
        "      <td>183.83</td>\n",
-       "      <td>185.445984</td>\n",
+       "      <td>175.647400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-15</th>\n",
        "      <td>183.28</td>\n",
-       "      <td>183.722061</td>\n",
+       "      <td>173.778488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-18</th>\n",
        "      <td>186.02</td>\n",
-       "      <td>187.093796</td>\n",
+       "      <td>177.293488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-19</th>\n",
        "      <td>186.79</td>\n",
-       "      <td>187.305252</td>\n",
+       "      <td>176.369720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-20</th>\n",
        "      <td>184.52</td>\n",
-       "      <td>184.696381</td>\n",
+       "      <td>173.272385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-21</th>\n",
        "      <td>181.71</td>\n",
-       "      <td>183.242752</td>\n",
+       "      <td>172.417130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-22</th>\n",
        "      <td>169.80</td>\n",
-       "      <td>169.834076</td>\n",
+       "      <td>159.437775</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-25</th>\n",
        "      <td>173.97</td>\n",
-       "      <td>173.611160</td>\n",
+       "      <td>165.223419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-26</th>\n",
        "      <td>177.84</td>\n",
-       "      <td>179.327011</td>\n",
+       "      <td>170.849884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-27</th>\n",
        "      <td>173.51</td>\n",
-       "      <td>174.201584</td>\n",
+       "      <td>164.030258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-28</th>\n",
        "      <td>182.85</td>\n",
-       "      <td>182.778519</td>\n",
+       "      <td>174.427063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-10-29</th>\n",
        "      <td>183.51</td>\n",
-       "      <td>183.002487</td>\n",
+       "      <td>172.660767</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -501,24 +512,24 @@
       "text/plain": [
        "             close   predicted\n",
        "Date                          \n",
-       "2021-10-11  178.10  180.531998\n",
-       "2021-10-12  175.82  175.915726\n",
-       "2021-10-13  184.06  184.310516\n",
-       "2021-10-14  183.83  185.445984\n",
-       "2021-10-15  183.28  183.722061\n",
-       "2021-10-18  186.02  187.093796\n",
-       "2021-10-19  186.79  187.305252\n",
-       "2021-10-20  184.52  184.696381\n",
-       "2021-10-21  181.71  183.242752\n",
-       "2021-10-22  169.80  169.834076\n",
-       "2021-10-25  173.97  173.611160\n",
-       "2021-10-26  177.84  179.327011\n",
-       "2021-10-27  173.51  174.201584\n",
-       "2021-10-28  182.85  182.778519\n",
-       "2021-10-29  183.51  183.002487"
+       "2021-10-11  178.10  172.113159\n",
+       "2021-10-12  175.82  165.821625\n",
+       "2021-10-13  184.06  175.341843\n",
+       "2021-10-14  183.83  175.647400\n",
+       "2021-10-15  183.28  173.778488\n",
+       "2021-10-18  186.02  177.293488\n",
+       "2021-10-19  186.79  176.369720\n",
+       "2021-10-20  184.52  173.272385\n",
+       "2021-10-21  181.71  172.417130\n",
+       "2021-10-22  169.80  159.437775\n",
+       "2021-10-25  173.97  165.223419\n",
+       "2021-10-26  177.84  170.849884\n",
+       "2021-10-27  173.51  164.030258\n",
+       "2021-10-28  182.85  174.427063\n",
+       "2021-10-29  183.51  172.660767"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7bacd455-aa72-4543-9cb8-c27a5c7503f9",
    "metadata": {},
    "outputs": [],
